# indi-3rdparty

./: .gitignore
indi-tecnocap/: AUTHORS  CMakeLists.txt  README.md  config.h  config.h.cmake  indi_tecnocap.xml  indi_tecnocap.xml.cmake  tecnocap.cpp  tecnocap.h
